--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,6 +13,7 @@ theme:
     - navigation.instant
     - navigation.expand
     - toc.integrate
+    - content.tabs.link
 
   custom_dir: overrides
 
@@ -47,12 +48,12 @@ markdown_extensions:
   - pymdownx.blocks.tab:
       alternate_style: true
 
-extra_css:
-  - stylesheets/extra.css
+# extra_css:
+#   - stylesheets/extra.css
 
-extra_javascript:
-  - js/theme-loader.js
-  - js/sw.js
+# extra_javascript:
+#   - js/theme-loader.js
+#   - js/sw.js
 
 nav:
   - 欢迎来到LiySTD: index.md
