--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,7 +22,7 @@ theme:
   palette:
 
     # Toggle light mode
-    - media: "dark"
+    - media: "light"
       scheme: default
       primary: indigo
       accent: indigo
@@ -31,7 +31,7 @@ theme:
         name: 切换到深色模式
 
     # Toggle dark mode
-    - media: "light"
+    - media: "dark"
       scheme: slate
       primary: blue
       accent: blue
@@ -53,9 +53,9 @@ markdown_extensions:
 extra_css:
   - stylesheets/extra.css
 
-extra_javascript:
-  - js/theme-loader.js
-  - js/sw.js
+# extra_javascript:
+#   - js/theme-loader.js
+#   - js/sw.js
 
 nav:
   - 欢迎来到LiySTD: index.md
