--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ theme:
     - navigation.expand
     - toc.integrate
     - content.tabs.link
+    - content.tooltips
 
   # custom_dir: overrides
   # static_templates:
